@@ -1,3 +1,11 @@
+2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>
+
+	Bug 515179 – F1 does not display help in interactive dialogue
+
+	* gnome-screenshot.c:
+	(key_press_cb), (create_interactive_dialog): Show help in the
+	interactive dialog when pressing F1. (Alexander Gnodtke)
+
 2008-07-27  Vincent Untz  <vuntz@gnome.org>
 
 	* gnome-screenshot.c: (target_toggled_cb), (create_effects_frame):
